--- a/task1/Portals/0/rich-content/brand/EAN/css/style.css
+++ b/task1/Portals/0/rich-content/brand/EAN/css/style.css
@@ -182,7 +182,150 @@ body {
 }
 
 
+.vitamin-layout__lemon-image {
+  
+    width: 70vw;
+    
+  
+    height: auto;
+    z-index: -1;
+   
+}
 
+
+
+
+.vitamin-layout {
+    width: 100%;
+    min-height: 100vh;
+    position: relative;
+    
+}
+
+.vitamin-layout__container {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 40px;
+}
+
+.vitamin-layout__center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: -2;
+}
+
+
+
+
+.info-card {
+    position: absolute;
+    max-width: 280px;
+    z-index: 20;
+}
+
+.info-card__bracket {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 120%;
+    /* height: 10%; */
+    z-index: 1;
+}
+
+.info-card__bracket-image {
+    width: 100%;
+    height: auto;
+    opacity: 0.9;
+}
+
+.info-card__content {
+    position: relative;
+    z-index: 2;
+    padding: 20px 25px;
+}
+
+.info-card__title {
+    font-size: 24px;
+    font-weight: 800;
+    color: #ff6b35;
+    text-transform: uppercase;
+    /* letter-spacing: 1px; */
+    margin-bottom: 15px;
+    line-height: 1.1;
+}
+
+.info-card__description {
+    font-size: 12px;
+    line-height: 1.2;
+    color: #333;
+    text-align: left;
+    margin-top: 40px;
+    /* margin-left: -15px; */
+}
+
+.info-card__description strong {
+    font-weight: 700;
+    color: #222;
+}
+
+/* Position Modifiers */
+.info-card--top-right {
+    /* top: 120px;
+    right: 140px; */
+
+    top: 20%;
+    right: 10%;
+}
+
+.info-card--top-right .info-card__content {
+    padding-top: 40px;
+    padding-right: 40px;
+}
+
+/* -- */
+.info-card--top-right .info-card__bracket {
+    position: absolute;
+    left: -110px;
+    top: 15px;
+}
+
+.info-card--bottom-left {
+    bottom: 20%;
+    left: 15%;
+}
+
+.info-card--bottom-left .info-card__content {
+    padding-bottom: 40px;
+    padding-left: 40px;
+}
+
+.info-card--bottom-left .info-card__title {
+    font-size: 20px;
+}
+
+.info-card--bottom-left .info-card__bracket {
+    top: 20px;
+    left: 20px;
+}
+
+.info-card--bottom-right {
+    bottom: 80px;
+    right: 200px;
+}
+.info-card--bottom-right .info-card__bracket {
+    top: -120px;
+    left: -60px;
+}
+
+.info-card--bottom-right .info-card__content {
+    padding-bottom: 20%;
+    padding-right: 10%;
+}
 
 /* Responsive layout */
 @media screen and (max-width: 600px) {
@@ -229,136 +372,33 @@ body {
    right:0px;
    display: none;
   }
-}
 
-
-.vitamin-layout {
-    width: 100%;
-    min-height: 100vh;
-    position: relative;
+  .vitamin-layout__lemon-image {
+  
+    width: 130vw;
     
-}
-
-.vitamin-layout__container {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 40px;
-}
-
-.vitamin-layout__center {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: -2;
-}
-
-.vitamin-layout__lemon-image {
-    width: 70vw;
-    /* max-width: 900px; */
-    height: auto;
-    z-index: -1;
+    
+  
    
 }
 
-
-.info-card {
-    position: absolute;
-    max-width: 280px;
-    z-index: 20;
-}
-
-.info-card__bracket {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 120%;
-    /* height: 10%; */
-    z-index: 1;
-}
-
-.info-card__bracket-image {
-    width: 100%;
-    height: auto;
-    opacity: 0.9;
-}
-
-.info-card__content {
-    position: relative;
-    z-index: 2;
-    padding: 20px 25px;
-}
-
-.info-card__title {
-    font-size: 24px;
-    font-weight: 800;
-    color: #ff6b35;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    margin-bottom: 15px;
-    line-height: 1.1;
-}
-
-.info-card__description {
-    font-size: 12px;
-    line-height: 1.2;
-    color: #333;
-    text-align: left;
-    margin-top: 40px;
-}
-
-.info-card__description strong {
-    font-weight: 700;
-    color: #222;
-}
-
-/* Position Modifiers */
 .info-card--top-right {
-    top: 120px;
-    right: 140px;
-}
+    /* top: 120px;
+    right: 140px; */
 
-.info-card--top-right .info-card__content {
-    padding-top: 40px;
-    padding-right: 40px;
-}
-
-/* -- */
-.info-card--top-right .info-card__bracket {
-    position: absolute;
-    left: -110px;
-    top: 15px;
-}
-
-.info-card--bottom-left {
-    bottom: 120px;
-    left: 160px;
-}
-
-.info-card--bottom-left .info-card__content {
-    padding-bottom: 40px;
-    padding-left: 40px;
-}
-
-.info-card--bottom-left .info-card__title {
-    font-size: 20px;
-}
-
-.info-card--bottom-left .info-card__bracket {
-    top: 20px;
-    left: 20px;
+    top: 20%;
+    right: 10%;
 }
 
 .info-card--bottom-right {
-    bottom: 80px;
-    right: 200px;
+    top: 80%;
+    left: 10%;
+
+    
 }
 
-.info-card--bottom-right .info-card__content {
-    padding-bottom: 40px;
-    padding-right: 40px;
+.vitamin-layout{
+    margin-bottom: 100px;
 }
 
+}
