--- a/task1/Portals/0/rich-content/brand/EAN/css/style.css
+++ b/task1/Portals/0/rich-content/brand/EAN/css/style.css
@@ -140,16 +140,18 @@ body {
     position: relative;
     width: 100%;
     height: 400px; 
-    position: relative
+    position: relative;
+     overflow: hidden;
+
 }
 
 .garnier__ingredients__capsule-image {
   width: 100%;
-  max-width: 600px;
+  /* max-width: 600px; */
   height: 100%;
-  /* object-fit: contain; */
+  object-fit: contain;
   z-index: 1;
-
+ 
 }
 
 .garnier__ingredients__grid{
@@ -217,6 +219,8 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: -2;
+
+    /* overflow: hidden; */
 }
 
 
@@ -314,8 +318,8 @@ body {
 }
 
 .info-card--bottom-right {
-    bottom: 80px;
-    right: 200px;
+    bottom: 10%;
+    right: 20%;
 }
 .info-card--bottom-right .info-card__bracket {
     top: -120px;
@@ -328,7 +332,7 @@ body {
 }
 
 /* Responsive layout */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 601px) {
   .garnier__header__section {
     flex-direction: column-reverse;
     height: auto;
@@ -374,31 +378,98 @@ body {
   }
 
   .vitamin-layout__lemon-image {
+  /* ************ */
+    /* width: 140vw; */
+    object-fit: contain;
+    }
+
+
+
+    .vitamin-layout{
+        margin-bottom: 100px;
+    }
+
+    .info-card--bottom-right{
+        /* top: 10%; */
+        /* top: 500px; */
+        bottom: -10%;
+    }
+
+}
+
+.usage__section {
+  padding: 4rem 2rem;
   
-    width: 130vw;
+}
+
+.usage__container {
+  max-width: 1280px;
+  margin: 0 auto;
+}
+
+.usage__title {
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: #1f2937;
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
+.usage__steps {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 2rem;
+}
+
+
+
+.usage__step {
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .usage__steps {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .usage__step {
+  text-align: left;
+}
     
+}
+
+.usage__image-wrapper {
+  width: 100%;
+  aspect-ratio: 1 / 1;
+ 
+  border-radius: 0.5rem;
+  margin-bottom: 1rem;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.usage__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.usage__step-title {
+  font-weight: 700;
+  color: #1f2937;
+  margin-bottom: 0.5rem;
+}
+
+.usage__step-description {
+  font-size: 0.875rem;
+  color: #374151;
+}
+
+
+#rich-content-container{
+    width: 100%;
     
-  
-   
-}
-
-.info-card--top-right {
-    /* top: 120px;
-    right: 140px; */
-
-    top: 20%;
-    right: 10%;
-}
-
-.info-card--bottom-right {
-    top: 80%;
-    left: 10%;
-
+    margin: 0 auto;
     
-}
-
-.vitamin-layout{
-    margin-bottom: 100px;
-}
-
 }
